feat: Implement contactbook features and complete translations

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -47,112 +47,7 @@
     "year": "वर्ष",
     "years": "वर्ष"
   },
-  "welcome": {
-    "title": "Flow Fam में आपका स्वागत है",
-    "subtitle": "अपने पारिवारिक जीवन में संरचना और शांति लाएं",
-    "startNewFamily": "नया परिवार शुरू करें",
-    "haveFamilyCode": "निमंत्रण कोड के साथ शामिल हों",
-    "alreadyHaveAccount": "मेरे पास पहले से एक खाता है – लॉग इन करें"
-  },
-  "settings": {
-    "account": "खाता",
-    "notSet": "सेट नहीं किया गया",
-    "role": "भूमिका",
-    "parent": "माता-पिता",
-    "child": "बच्चा",
-    "family": "परिवार",
-    "manageFamilyMembers": "परिवार के सदस्यों का प्रबंधन करें",
-    "shareFamilyCode": "परिवार कोड साझा करें",
-    "code": "कोड",
-    "appSettings": "ऐप",
-    "changeLanguage": "भाषा बदलें",
-    "refreshData": "डेटा रीफ्रेश करें",
-    "refreshing": "रीफ्रेश हो रहा है...",
-    "dataRefreshed": "आपका डेटा रीफ्रेश हो गया है",
-    "refreshError": "आपके डेटा को रीफ्रेश करते समय कुछ गलत हो गया",
-    "logoutConfirm": "क्या आप वाकई लॉग आउट करना चाहते हैं?",
-    "logoutError": "लॉग आउट करते समय कुछ गलत हो गया"
-  },
-  "auth": {
-    "login": {
-      "title": "लॉग इन करें",
-      "subtitle": "वापस स्वागत है!",
-      "withEmail": "ईमेल से लॉग इन करें",
-      "withApple": "Apple के साथ जारी रखें",
-      "withGoogle": "Google के साथ जारी रखें",
-      "emailPlaceholder": "you@email.com",
-      "passwordPlaceholder": "आपका पासवर्ड",
-      "fillEmail": "अपना ईमेल पता दर्ज करें",
-      "fillPassword": "अपना पासवर्ड दर्ज करें",
-      "fillDetails": "अपना विवरण भरें",
-      "noFamilyFound": "कोई परिवार नहीं मिला",
-      "noFamilyMessage": "आपको अभी तक किसी परिवार में नहीं जोड़ा गया है। परिवार के सदस्य से आपको आमंत्रित करने के लिए कहें या नया परिवार शुरू करें।",
-      "appleNotAvailable": "उपलब्ध नहीं",
-      "appleOnlyIOS": "Apple Sign-In केवल iOS पर उपलब्ध है"
-    },
-    "verifyEmail": {
-      "title": "अपना ईमेल सत्यापित करें",
-      "subtitle": "हमने 6 अंकों का सत्यापन कोड भेजा है",
-      "verify": "सत्यापित करें",
-      "noCodeReceived": "कोड प्राप्त नहीं हुआ?",
-      "resendCode": "कोड फिर से भेजें",
-      "sending": "भेजा जा रहा है...",
-      "codeSent": "भेज दिया गया!",
-      "codeSentMessage": "हमने आपके ईमेल पर एक नया सत्यापन कोड भेजा है।",
-      "invalidCode": "अमान्य सत्यापन कोड। कृपया पुनः प्रयास करें।",
-      "fillCompleteCode": "पूर्ण 6 अंकों का कोड दर्ज करें"
-    },
-    "createFamily": {
-      "title": "नया परिवार शुरू करें",
-      "subtitle": "चुनें कि आप कैसे लॉग इन करना चाहते हैं",
-      "registerWithEmail": "ईमेल से पंजीकरण करें",
-      "fillDetails": "शुरू करने के लिए अपना विवरण भरें",
-      "namePlaceholder": "आपका नाम",
-      "passwordMinLength": "पासवर्ड कम से कम 6 वर्णों का होना चाहिए",
-      "createFamily": "परिवार बनाएं",
-      "familyCreated": "परिवार बनाया गया! 🎉",
-      "familyCodeMessage": "आपका परिवार कोड है: {{code}}\n\nइस कोड को अपने साथी के साथ साझा करें ताकि वे शामिल हो सकें।"
-    },
-    "joinFamily": {
-      "title": "परिवार में शामिल हों",
-      "subtitle": "परिवार कोड और अपना नाम दर्ज करें",
-      "familyCodePlaceholder": "ABCDEF",
-      "namePlaceholder": "आपका नाम",
-      "continue": "जारी रखें",
-      "invalidCode": "क्षमा करें, यह कोड गलत है।",
-      "registerWithEmail": "ईमेल से पंजीकरण करें",
-      "createNewAccount": "नया खाता बनाएं",
-      "loginWithEmail": "ईमेल से लॉग इन करें",
-      "loginExistingAccount": "अपने मौजूदा खाते से लॉग इन करें",
-      "haveAccount": "पहले से खाता है? लॉग इन करें",
-      "noAccount": "खाता नहीं है? पंजीकरण करें",
-      "welcome": "स्वागत है! 🎉",
-      "welcomeMessage": "आपको सफलतापूर्वक परिवार में जोड़ा गया है।",
-      "addingToFamily": "आपको परिवार में जोड़ा जा रहा है..."
-    },
-    "setupFamily": {
-      "creatingFamily": "आपका परिवार बनाया जा रहा है..."
-    }
-  },
   "home": {
-    "title": "Flow Fam",
-    "tagline": "शांति, अवलोकन और प्यार",
-    "greeting": "नमस्ते, {{name}}! 👋",
-    "coins": "आपके पास {{count}} सिक्के हैं 🪙",
-    "welcomeMessage": "वापस स्वागत है! मैं आपको एक शानदार दिन और आपके कार्यों और नियुक्तियों में सफलता की कामना करता हूं 🧡",
-    "whoAreYou": "आप कौन हैं?",
-    "welcomeToFlowFam": "Flow Fam में आपका स्वागत है!",
-    "parent": "👨‍👩‍👧‍👦 माता-पिता",
-    "child": "👶 बच्चा",
-    "tasksToday": "✅ आज के कार्य",
-    "agendaToday": "📅 आज का एजेंडा",
-    "noTasksToday": "आज के लिए कोई कार्य नहीं!",
-    "noAppointmentsToday": "आज कोई नियुक्ति नहीं!",
-    "appointmentCount": "आज आपकी {{count}} नियुक्ति{{plural}} है",
-    "goToAgenda": "एजेंडा पर जाएं",
-    "yourTasks": "🎯 आपके कार्य",
-    "noTasksEnjoy": "कोई कार्य नहीं! अपने दिन का आनंद लें!",
-    "executeToday": "आज निष्पादित करें",
     "menu": {
       "agenda": "एजेंडा",
       "tasks": "कार्य",
@@ -163,8 +58,83 @@
       "notes": "नोट्स",
       "documents": "दस्तावेज़",
       "shop": "दुकान",
-      "profile": "प्रोफ़ाइल"
+      "profile": "प्रोफ़ाइल",
+      "contactbook": "संपर्क पुस्तिका",
+      "roosters": "समय सारणी"
     }
+  },
+  "contactbook": {
+    "title": "संपर्क पुस्तिका",
+    "subtitle": "महत्वपूर्ण संपर्क",
+    "addContact": "संपर्क जोड़ें",
+    "newContact": "नया संपर्क",
+    "editContact": "संपर्क संपादित करें",
+    "noContacts": "अभी तक कोई संपर्क नहीं",
+    "addFirstContact": "पहला संपर्क जोड़ें!",
+    "nameLabel": "नाम *",
+    "namePlaceholder": "नाम",
+    "categoryLabel": "श्रेणी",
+    "phoneLabel": "फोन",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "ईमेल",
+    "emailPlaceholder": "email@example.com",
+    "noteLabel": "नोट",
+    "notePlaceholder": "अतिरिक्त जानकारी...",
+    "fillName": "एक नाम दर्ज करें",
+    "contactAdded": "संपर्क जोड़ा गया",
+    "contactUpdated": "संपर्क अपडेट किया गया",
+    "contactDeleted": "संपर्क हटाया गया",
+    "deleteConfirm": "हटाएं?",
+    "deleteMessage": "क्या आप वाकई \"{{name}}\" को हटाना चाहते हैं?",
+    "couldNotLoad": "संपर्क लोड नहीं कर सके",
+    "errorLoading": "संपर्क लोड करते समय कुछ गलत हो गया",
+    "couldNotAdd": "संपर्क नहीं जोड़ सके",
+    "couldNotUpdate": "संपर्क अपडेट नहीं कर सके",
+    "couldNotDelete": "संपर्क हटा नहीं सके",
+    "errorSaving": "संपर्क सहेजते समय कुछ गलत हो गया",
+    "errorDeleting": "संपर्क हटाते समय कुछ गलत हो गया",
+    "noFamilyOrUser": "कोई परिवार या उपयोगकर्ता नहीं मिला"
+  },
+  "roosters": {
+    "title": "समय सारणी",
+    "subtitle": "पारिवारिक समय सारणी प्रबंधित करें",
+    "addSchedule": "समय सारणी जोड़ें",
+    "newSchedule": "नई समय सारणी",
+    "editSchedule": "समय सारणी संपादित करें",
+    "deleteConfirm": "समय सारणी हटाएं?",
+    "deleteMessage": "क्या आप वाकई इस समय सारणी को हटाना चाहते हैं?",
+    "scheduleAdded": "समय सारणी जोड़ी गई",
+    "scheduleUpdated": "समय सारणी अपडेट की गई",
+    "scheduleDeleted": "समय सारणी हटाई गई",
+    "addedToAgenda": "समय सारणी एजेंडा में जोड़ी गई",
+    "fillTitle": "एक शीर्षक दर्ज करें",
+    "selectMember": "एक परिवार सदस्य चुनें",
+    "addScheduleItem": "कम से कम एक समय सारणी नियम जोड़ें",
+    "titlePlaceholder": "उदाहरण: एम्मा की स्कूल समय सारणी",
+    "type": "प्रकार",
+    "school": "स्कूल",
+    "work": "काम",
+    "sport": "खेल",
+    "other": "अन्य",
+    "member": "परिवार सदस्य",
+    "startDate": "प्रारंभ तिथि",
+    "endDate": "समाप्ति तिथि",
+    "ongoing": "चल रहा",
+    "scheduleRules": "समय सारणी नियम",
+    "addRule": "नियम जोड़ें",
+    "rule": "नियम",
+    "day": "दिन",
+    "startTime": "प्रारंभ समय",
+    "endTime": "समाप्ति समय",
+    "location": "स्थान",
+    "note": "नोट",
+    "color": "रंग",
+    "noSchedules": "अभी तक कोई समय सारणी नहीं",
+    "noSchedulesText": "शुरू करने के लिए अपनी पहली समय सारणी जोड़ें",
+    "edit": "संपादित करें",
+    "delete": "हटाएं",
+    "addToAgenda": "एजेंडा में",
+    "eventsCreated": "नियुक्तियां बनाई गईं"
   },
   "language": {
     "title": "भाषा",
