--- a/locales/ja.json
+++ b/locales/ja.json
@@ -47,112 +47,7 @@
     "year": "年",
     "years": "年"
   },
-  "welcome": {
-    "title": "Flow Famへようこそ",
-    "subtitle": "家族の生活に構造と平和をもたらします",
-    "startNewFamily": "新しい家族を始める",
-    "haveFamilyCode": "招待コードで参加",
-    "alreadyHaveAccount": "すでにアカウントをお持ちの方 – ログイン"
-  },
-  "settings": {
-    "account": "アカウント",
-    "notSet": "未設定",
-    "role": "役割",
-    "parent": "親",
-    "child": "子供",
-    "family": "家族",
-    "manageFamilyMembers": "家族メンバーを管理",
-    "shareFamilyCode": "家族コードを共有",
-    "code": "コード",
-    "appSettings": "アプリ",
-    "changeLanguage": "言語を変更",
-    "refreshData": "データを更新",
-    "refreshing": "更新中...",
-    "dataRefreshed": "データが更新されました",
-    "refreshError": "データの更新中にエラーが発生しました",
-    "logoutConfirm": "ログアウトしてもよろしいですか？",
-    "logoutError": "ログアウト中にエラーが発生しました"
-  },
-  "auth": {
-    "login": {
-      "title": "ログイン",
-      "subtitle": "おかえりなさい！",
-      "withEmail": "メールでログイン",
-      "withApple": "Appleで続ける",
-      "withGoogle": "Googleで続ける",
-      "emailPlaceholder": "you@email.com",
-      "passwordPlaceholder": "パスワード",
-      "fillEmail": "メールアドレスを入力してください",
-      "fillPassword": "パスワードを入力してください",
-      "fillDetails": "詳細を入力してください",
-      "noFamilyFound": "家族が見つかりません",
-      "noFamilyMessage": "まだ家族に追加されていません。家族メンバーに招待してもらうか、新しい家族を始めてください。",
-      "appleNotAvailable": "利用できません",
-      "appleOnlyIOS": "Apple Sign-InはiOSでのみ利用可能です"
-    },
-    "verifyEmail": {
-      "title": "メールを確認",
-      "subtitle": "6桁の確認コードを送信しました",
-      "verify": "確認",
-      "noCodeReceived": "コードが届きませんでしたか？",
-      "resendCode": "コードを再送信",
-      "sending": "送信中...",
-      "codeSent": "送信しました！",
-      "codeSentMessage": "新しい確認コードをメールに送信しました。",
-      "invalidCode": "確認コードが無効です。もう一度お試しください。",
-      "fillCompleteCode": "6桁のコードを完全に入力してください"
-    },
-    "createFamily": {
-      "title": "新しい家族を始める",
-      "subtitle": "ログイン方法を選択してください",
-      "registerWithEmail": "メールで登録",
-      "fillDetails": "開始するために詳細を入力してください",
-      "namePlaceholder": "お名前",
-      "passwordMinLength": "パスワードは6文字以上である必要があります",
-      "createFamily": "家族を作成",
-      "familyCreated": "家族が作成されました！🎉",
-      "familyCodeMessage": "家族コードは：{{code}}\n\nパートナーとこのコードを共有して、参加できるようにしてください。"
-    },
-    "joinFamily": {
-      "title": "家族に参加",
-      "subtitle": "家族コードとお名前を入力してください",
-      "familyCodePlaceholder": "ABCDEF",
-      "namePlaceholder": "お名前",
-      "continue": "続ける",
-      "invalidCode": "申し訳ありませんが、このコードは正しくありません。",
-      "registerWithEmail": "メールで登録",
-      "createNewAccount": "新しいアカウントを作成",
-      "loginWithEmail": "メールでログイン",
-      "loginExistingAccount": "既存のアカウントでログイン",
-      "haveAccount": "すでにアカウントをお持ちですか？ログイン",
-      "noAccount": "アカウントをお持ちでないですか？登録",
-      "welcome": "ようこそ！🎉",
-      "welcomeMessage": "家族に正常に追加されました。",
-      "addingToFamily": "家族に追加しています..."
-    },
-    "setupFamily": {
-      "creatingFamily": "家族を作成しています..."
-    }
-  },
   "home": {
-    "title": "Flow Fam",
-    "tagline": "平和、概要、愛",
-    "greeting": "こんにちは、{{name}}さん！👋",
-    "coins": "{{count}}コインあります 🪙",
-    "welcomeMessage": "おかえりなさい！素晴らしい一日と、タスクと予定の成功をお祈りします 🧡",
-    "whoAreYou": "あなたは誰ですか？",
-    "welcomeToFlowFam": "Flow Famへようこそ！",
-    "parent": "👨‍👩‍👧‍👦 親",
-    "child": "👶 子供",
-    "tasksToday": "✅ 今日のタスク",
-    "agendaToday": "📅 今日の予定",
-    "noTasksToday": "今日のタスクはありません！",
-    "noAppointmentsToday": "今日の予定はありません！",
-    "appointmentCount": "今日は{{count}}件の予定{{plural}}があります",
-    "goToAgenda": "予定表へ",
-    "yourTasks": "🎯 あなたのタスク",
-    "noTasksEnjoy": "タスクはありません！一日を楽しんでください！",
-    "executeToday": "今日実行",
     "menu": {
       "agenda": "予定表",
       "tasks": "タスク",
@@ -163,8 +58,83 @@
       "notes": "メモ",
       "documents": "ドキュメント",
       "shop": "ショップ",
-      "profile": "プロフィール"
+      "profile": "プロフィール",
+      "contactbook": "連絡先帳",
+      "roosters": "スケジュール"
     }
+  },
+  "contactbook": {
+    "title": "連絡先帳",
+    "subtitle": "重要な連絡先",
+    "addContact": "連絡先を追加",
+    "newContact": "新しい連絡先",
+    "editContact": "連絡先を編集",
+    "noContacts": "まだ連絡先がありません",
+    "addFirstContact": "最初の連絡先を追加してください！",
+    "nameLabel": "名前 *",
+    "namePlaceholder": "名前",
+    "categoryLabel": "カテゴリー",
+    "phoneLabel": "電話",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "メール",
+    "emailPlaceholder": "email@example.com",
+    "noteLabel": "メモ",
+    "notePlaceholder": "追加情報...",
+    "fillName": "名前を入力してください",
+    "contactAdded": "連絡先が追加されました",
+    "contactUpdated": "連絡先が更新されました",
+    "contactDeleted": "連絡先が削除されました",
+    "deleteConfirm": "削除しますか？",
+    "deleteMessage": "本当に「{{name}}」を削除しますか？",
+    "couldNotLoad": "連絡先を読み込めませんでした",
+    "errorLoading": "連絡先の読み込み中にエラーが発生しました",
+    "couldNotAdd": "連絡先を追加できませんでした",
+    "couldNotUpdate": "連絡先を更新できませんでした",
+    "couldNotDelete": "連絡先を削除できませんでした",
+    "errorSaving": "連絡先の保存中にエラーが発生しました",
+    "errorDeleting": "連絡先の削除中にエラーが発生しました",
+    "noFamilyOrUser": "家族またはユーザーが見つかりません"
+  },
+  "roosters": {
+    "title": "スケジュール",
+    "subtitle": "家族のスケジュールを管理",
+    "addSchedule": "スケジュールを追加",
+    "newSchedule": "新しいスケジュール",
+    "editSchedule": "スケジュールを編集",
+    "deleteConfirm": "スケジュールを削除しますか？",
+    "deleteMessage": "本当にこのスケジュールを削除しますか？",
+    "scheduleAdded": "スケジュールが追加されました",
+    "scheduleUpdated": "スケジュールが更新されました",
+    "scheduleDeleted": "スケジュールが削除されました",
+    "addedToAgenda": "スケジュールが予定表に追加されました",
+    "fillTitle": "タイトルを入力してください",
+    "selectMember": "家族メンバーを選択してください",
+    "addScheduleItem": "少なくとも1つのスケジュールルールを追加してください",
+    "titlePlaceholder": "例：エマの学校スケジュール",
+    "type": "タイプ",
+    "school": "学校",
+    "work": "仕事",
+    "sport": "スポーツ",
+    "other": "その他",
+    "member": "家族メンバー",
+    "startDate": "開始日",
+    "endDate": "終了日",
+    "ongoing": "継続中",
+    "scheduleRules": "スケジュールルール",
+    "addRule": "ルールを追加",
+    "rule": "ルール",
+    "day": "曜日",
+    "startTime": "開始時刻",
+    "endTime": "終了時刻",
+    "location": "場所",
+    "note": "メモ",
+    "color": "色",
+    "noSchedules": "まだスケジュールがありません",
+    "noSchedulesText": "最初のスケジュールを追加して開始してください",
+    "edit": "編集",
+    "delete": "削除",
+    "addToAgenda": "予定表へ",
+    "eventsCreated": "予定が作成されました"
   },
   "language": {
     "title": "言語",
