--- a/locales/pl.json
+++ b/locales/pl.json
@@ -47,112 +47,7 @@
     "year": "Rok",
     "years": "lat"
   },
-  "welcome": {
-    "title": "Witamy w Flow Fam",
-    "subtitle": "Wprowadź strukturę i spokój do życia rodzinnego",
-    "startNewFamily": "Rozpocznij nową rodzinę",
-    "haveFamilyCode": "Dołącz za pomocą kodu zaproszenia",
-    "alreadyHaveAccount": "Mam już konto – Zaloguj się"
-  },
-  "settings": {
-    "account": "Konto",
-    "notSet": "Nie ustawiono",
-    "role": "Rola",
-    "parent": "Rodzic",
-    "child": "Dziecko",
-    "family": "Rodzina",
-    "manageFamilyMembers": "Zarządzaj członkami rodziny",
-    "shareFamilyCode": "Udostępnij kod rodziny",
-    "code": "Kod",
-    "appSettings": "Aplikacja",
-    "changeLanguage": "Zmień język",
-    "refreshData": "Odśwież dane",
-    "refreshing": "Odświeżanie...",
-    "dataRefreshed": "Twoje dane zostały odświeżone",
-    "refreshError": "Coś poszło nie tak podczas odświeżania danych",
-    "logoutConfirm": "Czy na pewno chcesz się wylogować?",
-    "logoutError": "Coś poszło nie tak podczas wylogowywania"
-  },
-  "auth": {
-    "login": {
-      "title": "Zaloguj się",
-      "subtitle": "Witaj ponownie!",
-      "withEmail": "Zaloguj się przez e-mail",
-      "withApple": "Kontynuuj z Apple",
-      "withGoogle": "Kontynuuj z Google",
-      "emailPlaceholder": "ty@email.com",
-      "passwordPlaceholder": "Twoje hasło",
-      "fillEmail": "Wprowadź swój adres e-mail",
-      "fillPassword": "Wprowadź swoje hasło",
-      "fillDetails": "Wypełnij swoje dane",
-      "noFamilyFound": "Nie znaleziono rodziny",
-      "noFamilyMessage": "Nie zostałeś jeszcze dodany do rodziny. Poproś członka rodziny o zaproszenie lub rozpocznij nową rodzinę.",
-      "appleNotAvailable": "Niedostępne",
-      "appleOnlyIOS": "Apple Sign-In jest dostępny tylko na iOS"
-    },
-    "verifyEmail": {
-      "title": "Zweryfikuj swój e-mail",
-      "subtitle": "Wysłaliśmy 6-cyfrowy kod weryfikacyjny na",
-      "verify": "Zweryfikuj",
-      "noCodeReceived": "Nie otrzymałeś kodu?",
-      "resendCode": "Wyślij kod ponownie",
-      "sending": "Wysyłanie...",
-      "codeSent": "Wysłano!",
-      "codeSentMessage": "Wysłaliśmy nowy kod weryfikacyjny na Twój e-mail.",
-      "invalidCode": "Nieprawidłowy kod weryfikacyjny. Spróbuj ponownie.",
-      "fillCompleteCode": "Wprowadź pełny 6-cyfrowy kod"
-    },
-    "createFamily": {
-      "title": "Rozpocznij nową rodzinę",
-      "subtitle": "Wybierz sposób logowania",
-      "registerWithEmail": "Zarejestruj się przez e-mail",
-      "fillDetails": "Wypełnij swoje dane, aby rozpocząć",
-      "namePlaceholder": "Twoje imię",
-      "passwordMinLength": "Hasło musi mieć co najmniej 6 znaków",
-      "createFamily": "Utwórz rodzinę",
-      "familyCreated": "Rodzina utworzona! 🎉",
-      "familyCodeMessage": "Twój kod rodziny to: {{code}}\n\nUdostępnij ten kod swojemu partnerowi, aby mógł dołączyć."
-    },
-    "joinFamily": {
-      "title": "Dołącz do rodziny",
-      "subtitle": "Wprowadź kod rodziny i swoje imię",
-      "familyCodePlaceholder": "ABCDEF",
-      "namePlaceholder": "Twoje imię",
-      "continue": "Kontynuuj",
-      "invalidCode": "Ups, ten kod jest nieprawidłowy.",
-      "registerWithEmail": "Zarejestruj się przez e-mail",
-      "createNewAccount": "Utwórz nowe konto",
-      "loginWithEmail": "Zaloguj się przez e-mail",
-      "loginExistingAccount": "Zaloguj się na swoje istniejące konto",
-      "haveAccount": "Masz już konto? Zaloguj się",
-      "noAccount": "Nie masz konta? Zarejestruj się",
-      "welcome": "Witaj! 🎉",
-      "welcomeMessage": "Zostałeś pomyślnie dodany do rodziny.",
-      "addingToFamily": "Dodawanie do rodziny..."
-    },
-    "setupFamily": {
-      "creatingFamily": "Tworzenie rodziny..."
-    }
-  },
   "home": {
-    "title": "Flow Fam",
-    "tagline": "Spokój, przegląd i miłość",
-    "greeting": "Cześć, {{name}}! 👋",
-    "coins": "Masz {{count}} monet 🪙",
-    "welcomeMessage": "Witaj ponownie! Życzę Ci wspaniałego dnia i powodzenia w zadaniach i spotkaniach 🧡",
-    "whoAreYou": "Kim jesteś?",
-    "welcomeToFlowFam": "Witamy w Flow Fam!",
-    "parent": "👨‍👩‍👧‍👦 Rodzic",
-    "child": "👶 Dziecko",
-    "tasksToday": "✅ Zadania dzisiaj",
-    "agendaToday": "📅 Agenda dzisiaj",
-    "noTasksToday": "Brak zadań na dzisiaj!",
-    "noAppointmentsToday": "Brak spotkań dzisiaj!",
-    "appointmentCount": "Masz {{count}} spotkanie{{plural}} dzisiaj",
-    "goToAgenda": "Przejdź do agendy",
-    "yourTasks": "🎯 Twoje zadania",
-    "noTasksEnjoy": "Brak zadań! Ciesz się dniem!",
-    "executeToday": "Wykonaj dzisiaj",
     "menu": {
       "agenda": "Agenda",
       "tasks": "Zadania",
@@ -163,8 +58,83 @@
       "notes": "Notatki",
       "documents": "Dokumenty",
       "shop": "Sklep",
-      "profile": "Profil"
+      "profile": "Profil",
+      "contactbook": "Książka kontaktów",
+      "roosters": "Harmonogramy"
     }
+  },
+  "contactbook": {
+    "title": "Książka kontaktów",
+    "subtitle": "Ważne kontakty",
+    "addContact": "Dodaj kontakt",
+    "newContact": "Nowy kontakt",
+    "editContact": "Edytuj kontakt",
+    "noContacts": "Jeszcze brak kontaktów",
+    "addFirstContact": "Dodaj pierwszy kontakt!",
+    "nameLabel": "Imię *",
+    "namePlaceholder": "Imię",
+    "categoryLabel": "Kategoria",
+    "phoneLabel": "Telefon",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "E-mail",
+    "emailPlaceholder": "email@example.com",
+    "noteLabel": "Notatka",
+    "notePlaceholder": "Dodatkowe informacje...",
+    "fillName": "Wprowadź imię",
+    "contactAdded": "Kontakt dodany",
+    "contactUpdated": "Kontakt zaktualizowany",
+    "contactDeleted": "Kontakt usunięty",
+    "deleteConfirm": "Usunąć?",
+    "deleteMessage": "Czy na pewno chcesz usunąć \"{{name}}\"?",
+    "couldNotLoad": "Nie można załadować kontaktów",
+    "errorLoading": "Wystąpił błąd podczas ładowania kontaktów",
+    "couldNotAdd": "Nie można dodać kontaktu",
+    "couldNotUpdate": "Nie można zaktualizować kontaktu",
+    "couldNotDelete": "Nie można usunąć kontaktu",
+    "errorSaving": "Wystąpił błąd podczas zapisywania kontaktu",
+    "errorDeleting": "Wystąpił błąd podczas usuwania kontaktu",
+    "noFamilyOrUser": "Nie znaleziono rodziny lub użytkownika"
+  },
+  "roosters": {
+    "title": "Harmonogramy",
+    "subtitle": "Zarządzaj harmonogramami rodzinnymi",
+    "addSchedule": "Dodaj harmonogram",
+    "newSchedule": "Nowy harmonogram",
+    "editSchedule": "Edytuj harmonogram",
+    "deleteConfirm": "Usunąć harmonogram?",
+    "deleteMessage": "Czy na pewno chcesz usunąć ten harmonogram?",
+    "scheduleAdded": "Harmonogram dodany",
+    "scheduleUpdated": "Harmonogram zaktualizowany",
+    "scheduleDeleted": "Harmonogram usunięty",
+    "addedToAgenda": "Harmonogram dodany do agendy",
+    "fillTitle": "Wprowadź tytuł",
+    "selectMember": "Wybierz członka rodziny",
+    "addScheduleItem": "Dodaj co najmniej jedną regułę harmonogramu",
+    "titlePlaceholder": "Np. Harmonogram szkolny Emmy",
+    "type": "Typ",
+    "school": "Szkoła",
+    "work": "Praca",
+    "sport": "Sport",
+    "other": "Inne",
+    "member": "Członek rodziny",
+    "startDate": "Data rozpoczęcia",
+    "endDate": "Data zakończenia",
+    "ongoing": "Trwający",
+    "scheduleRules": "Reguły harmonogramu",
+    "addRule": "Dodaj regułę",
+    "rule": "Reguła",
+    "day": "Dzień",
+    "startTime": "Czas rozpoczęcia",
+    "endTime": "Czas zakończenia",
+    "location": "Lokalizacja",
+    "note": "Notatka",
+    "color": "Kolor",
+    "noSchedules": "Jeszcze brak harmonogramów",
+    "noSchedulesText": "Dodaj swój pierwszy harmonogram, aby rozpocząć",
+    "edit": "Edytuj",
+    "delete": "Usuń",
+    "addToAgenda": "Do agendy",
+    "eventsCreated": "utworzono spotkania"
   },
   "language": {
     "title": "Język",
