--- a/locales/pt.json
+++ b/locales/pt.json
@@ -47,112 +47,7 @@
     "year": "Ano",
     "years": "anos"
   },
-  "welcome": {
-    "title": "Bem-vindo ao Flow Fam",
-    "subtitle": "Traga estrutura e paz para sua vida familiar",
-    "startNewFamily": "Iniciar nova família",
-    "haveFamilyCode": "Participar com código de convite",
-    "alreadyHaveAccount": "Já tenho uma conta – Entrar"
-  },
-  "settings": {
-    "account": "Conta",
-    "notSet": "Não definido",
-    "role": "Função",
-    "parent": "Pai/Mãe",
-    "child": "Filho/Filha",
-    "family": "Família",
-    "manageFamilyMembers": "Gerenciar membros da família",
-    "shareFamilyCode": "Compartilhar código da família",
-    "code": "Código",
-    "appSettings": "Aplicativo",
-    "changeLanguage": "Alterar idioma",
-    "refreshData": "Atualizar dados",
-    "refreshing": "Atualizando...",
-    "dataRefreshed": "Seus dados foram atualizados",
-    "refreshError": "Algo deu errado ao atualizar seus dados",
-    "logoutConfirm": "Tem certeza de que deseja sair?",
-    "logoutError": "Algo deu errado ao sair"
-  },
-  "auth": {
-    "login": {
-      "title": "Entrar",
-      "subtitle": "Bem-vindo de volta!",
-      "withEmail": "Entrar com e-mail",
-      "withApple": "Continuar com Apple",
-      "withGoogle": "Continuar com Google",
-      "emailPlaceholder": "voce@email.com",
-      "passwordPlaceholder": "Sua senha",
-      "fillEmail": "Digite seu endereço de e-mail",
-      "fillPassword": "Digite sua senha",
-      "fillDetails": "Preencha seus dados",
-      "noFamilyFound": "Nenhuma família encontrada",
-      "noFamilyMessage": "Você ainda não foi adicionado a uma família. Peça a um membro da família para convidá-lo ou inicie uma nova família.",
-      "appleNotAvailable": "Não disponível",
-      "appleOnlyIOS": "Apple Sign-In está disponível apenas no iOS"
-    },
-    "verifyEmail": {
-      "title": "Verifique seu e-mail",
-      "subtitle": "Enviamos um código de verificação de 6 dígitos para",
-      "verify": "Verificar",
-      "noCodeReceived": "Não recebeu um código?",
-      "resendCode": "Reenviar código",
-      "sending": "Enviando...",
-      "codeSent": "Enviado!",
-      "codeSentMessage": "Enviamos um novo código de verificação para seu e-mail.",
-      "invalidCode": "Código de verificação inválido. Por favor, tente novamente.",
-      "fillCompleteCode": "Digite o código completo de 6 dígitos"
-    },
-    "createFamily": {
-      "title": "Iniciar nova família",
-      "subtitle": "Escolha como você quer entrar",
-      "registerWithEmail": "Registrar com e-mail",
-      "fillDetails": "Preencha seus dados para começar",
-      "namePlaceholder": "Seu nome",
-      "passwordMinLength": "A senha deve ter pelo menos 6 caracteres",
-      "createFamily": "Criar família",
-      "familyCreated": "Família criada! 🎉",
-      "familyCodeMessage": "Seu código familiar é: {{code}}\n\nCompartilhe este código com seu parceiro para que ele possa participar."
-    },
-    "joinFamily": {
-      "title": "Participar da família",
-      "subtitle": "Digite o código familiar e seu nome",
-      "familyCodePlaceholder": "ABCDEF",
-      "namePlaceholder": "Seu nome",
-      "continue": "Continuar",
-      "invalidCode": "Ops, este código está incorreto.",
-      "registerWithEmail": "Registrar com e-mail",
-      "createNewAccount": "Criar uma nova conta",
-      "loginWithEmail": "Entrar com e-mail",
-      "loginExistingAccount": "Entrar com sua conta existente",
-      "haveAccount": "Já tem uma conta? Entrar",
-      "noAccount": "Não tem uma conta? Registrar",
-      "welcome": "Bem-vindo! 🎉",
-      "welcomeMessage": "Você foi adicionado com sucesso à família.",
-      "addingToFamily": "Adicionando você à família..."
-    },
-    "setupFamily": {
-      "creatingFamily": "Criando sua família..."
-    }
-  },
   "home": {
-    "title": "Flow Fam",
-    "tagline": "Paz, visão geral e amor",
-    "greeting": "Olá, {{name}}! 👋",
-    "coins": "Você tem {{count}} moedas 🪙",
-    "welcomeMessage": "Bem-vindo de volta! Desejo-lhe um ótimo dia e sucesso com suas tarefas e compromissos 🧡",
-    "whoAreYou": "Quem é você?",
-    "welcomeToFlowFam": "Bem-vindo ao Flow Fam!",
-    "parent": "👨‍👩‍👧‍👦 Pai/Mãe",
-    "child": "👶 Filho/Filha",
-    "tasksToday": "✅ Tarefas hoje",
-    "agendaToday": "📅 Agenda hoje",
-    "noTasksToday": "Sem tarefas para hoje!",
-    "noAppointmentsToday": "Sem compromissos hoje!",
-    "appointmentCount": "Você tem {{count}} compromisso{{plural}} hoje",
-    "goToAgenda": "Ir para agenda",
-    "yourTasks": "🎯 Suas tarefas",
-    "noTasksEnjoy": "Sem tarefas! Aproveite seu dia!",
-    "executeToday": "Executar hoje",
     "menu": {
       "agenda": "Agenda",
       "tasks": "Tarefas",
@@ -163,29 +58,83 @@
       "notes": "Notas",
       "documents": "Documentos",
       "shop": "Loja",
-      "profile": "Perfil"
+      "profile": "Perfil",
+      "contactbook": "Livro de contatos",
+      "roosters": "Horários"
     }
   },
-  "children": {
-    "title": "Crianças",
-    "subtitle": "Gerencie suas crianças",
-    "noChildren": "Nenhuma criança adicionada",
-    "addChildrenHint": "Adicione crianças através da tela de configurações"
+  "contactbook": {
+    "title": "Livro de contatos",
+    "subtitle": "Contatos importantes",
+    "addContact": "Adicionar contato",
+    "newContact": "Novo contato",
+    "editContact": "Editar contato",
+    "noContacts": "Ainda não há contatos",
+    "addFirstContact": "Adicione o primeiro contato!",
+    "nameLabel": "Nome *",
+    "namePlaceholder": "Nome",
+    "categoryLabel": "Categoria",
+    "phoneLabel": "Telefone",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "E-mail",
+    "emailPlaceholder": "email@exemplo.com",
+    "noteLabel": "Nota",
+    "notePlaceholder": "Informações extras...",
+    "fillName": "Digite um nome",
+    "contactAdded": "Contato adicionado",
+    "contactUpdated": "Contato atualizado",
+    "contactDeleted": "Contato excluído",
+    "deleteConfirm": "Excluir?",
+    "deleteMessage": "Tem certeza de que deseja excluir \"{{name}}\"?",
+    "couldNotLoad": "Não foi possível carregar os contatos",
+    "errorLoading": "Ocorreu um erro ao carregar os contatos",
+    "couldNotAdd": "Não foi possível adicionar o contato",
+    "couldNotUpdate": "Não foi possível atualizar o contato",
+    "couldNotDelete": "Não foi possível excluir o contato",
+    "errorSaving": "Ocorreu um erro ao salvar o contato",
+    "errorDeleting": "Ocorreu um erro ao excluir o contato",
+    "noFamilyOrUser": "Nenhuma família ou usuário encontrado"
   },
-  "notifications": {
-    "title": "Notificações",
-    "subtitle": "Suas notificações",
-    "noNotifications": "Sem notificações",
-    "newTaskAssigned": "Nova tarefa atribuída",
-    "newTaskMessage": "Você tem uma nova tarefa",
-    "reminder": "Lembrete",
-    "reminderMessage": "Não esqueça sua tarefa",
-    "rewardEarned": "Recompensa ganha!",
-    "rewardMessage": "Você ganhou {{count}} moedas",
-    "familyUpdate": "Atualização familiar",
-    "familyUpdateMessage": "A agenda foi atualizada",
-    "minutesAgo": "{{count}} minutos atrás",
-    "hoursAgo": "{{count}} horas atrás"
+  "roosters": {
+    "title": "Horários",
+    "subtitle": "Gerencie horários familiares",
+    "addSchedule": "Adicionar horário",
+    "newSchedule": "Novo horário",
+    "editSchedule": "Editar horário",
+    "deleteConfirm": "Excluir horário?",
+    "deleteMessage": "Tem certeza de que deseja excluir este horário?",
+    "scheduleAdded": "Horário adicionado",
+    "scheduleUpdated": "Horário atualizado",
+    "scheduleDeleted": "Horário excluído",
+    "addedToAgenda": "Horário adicionado à agenda",
+    "fillTitle": "Digite um título",
+    "selectMember": "Selecione um membro da família",
+    "addScheduleItem": "Adicione pelo menos uma regra de horário",
+    "titlePlaceholder": "Ex: Horário escolar da Emma",
+    "type": "Tipo",
+    "school": "Escola",
+    "work": "Trabalho",
+    "sport": "Esporte",
+    "other": "Outro",
+    "member": "Membro da família",
+    "startDate": "Data de início",
+    "endDate": "Data de término",
+    "ongoing": "Contínuo",
+    "scheduleRules": "Regras de horário",
+    "addRule": "Adicionar regra",
+    "rule": "Regra",
+    "day": "Dia",
+    "startTime": "Hora de início",
+    "endTime": "Hora de término",
+    "location": "Local",
+    "note": "Nota",
+    "color": "Cor",
+    "noSchedules": "Ainda não há horários",
+    "noSchedulesText": "Adicione seu primeiro horário para começar",
+    "edit": "Editar",
+    "delete": "Excluir",
+    "addToAgenda": "Para agenda",
+    "eventsCreated": "compromissos criados"
   },
   "language": {
     "title": "Idioma",
