--- a/locales/tr.json
+++ b/locales/tr.json
@@ -47,112 +47,7 @@
     "year": "Yıl",
     "years": "yıl"
   },
-  "welcome": {
-    "title": "Flow Fam'e Hoş Geldiniz",
-    "subtitle": "Aile hayatınıza yapı ve huzur getirin",
-    "startNewFamily": "Yeni aile başlat",
-    "haveFamilyCode": "Davet koduyla katıl",
-    "alreadyHaveAccount": "Zaten bir hesabım var – Giriş yap"
-  },
-  "settings": {
-    "account": "Hesap",
-    "notSet": "Ayarlanmadı",
-    "role": "Rol",
-    "parent": "Ebeveyn",
-    "child": "Çocuk",
-    "family": "Aile",
-    "manageFamilyMembers": "Aile üyelerini yönet",
-    "shareFamilyCode": "Aile kodunu paylaş",
-    "code": "Kod",
-    "appSettings": "Uygulama",
-    "changeLanguage": "Dili değiştir",
-    "refreshData": "Verileri yenile",
-    "refreshing": "Yenileniyor...",
-    "dataRefreshed": "Verileriniz yenilendi",
-    "refreshError": "Verileriniz yenilenirken bir şeyler ters gitti",
-    "logoutConfirm": "Çıkış yapmak istediğinizden emin misiniz?",
-    "logoutError": "Çıkış yapılırken bir şeyler ters gitti"
-  },
-  "auth": {
-    "login": {
-      "title": "Giriş Yap",
-      "subtitle": "Tekrar hoş geldiniz!",
-      "withEmail": "E-posta ile giriş yap",
-      "withApple": "Apple ile devam et",
-      "withGoogle": "Google ile devam et",
-      "emailPlaceholder": "sen@email.com",
-      "passwordPlaceholder": "Şifreniz",
-      "fillEmail": "E-posta adresinizi girin",
-      "fillPassword": "Şifrenizi girin",
-      "fillDetails": "Bilgilerinizi doldurun",
-      "noFamilyFound": "Aile bulunamadı",
-      "noFamilyMessage": "Henüz bir aileye eklenmemişsiniz. Bir aile üyesinden sizi davet etmesini isteyin veya yeni bir aile başlatın.",
-      "appleNotAvailable": "Kullanılamıyor",
-      "appleOnlyIOS": "Apple Sign-In yalnızca iOS'ta kullanılabilir"
-    },
-    "verifyEmail": {
-      "title": "E-postanızı doğrulayın",
-      "subtitle": "6 haneli bir doğrulama kodu gönderdik",
-      "verify": "Doğrula",
-      "noCodeReceived": "Kod almadınız mı?",
-      "resendCode": "Kodu tekrar gönder",
-      "sending": "Gönderiliyor...",
-      "codeSent": "Gönderildi!",
-      "codeSentMessage": "E-postanıza yeni bir doğrulama kodu gönderdik.",
-      "invalidCode": "Geçersiz doğrulama kodu. Lütfen tekrar deneyin.",
-      "fillCompleteCode": "Tam 6 haneli kodu girin"
-    },
-    "createFamily": {
-      "title": "Yeni aile başlat",
-      "subtitle": "Nasıl giriş yapmak istediğinizi seçin",
-      "registerWithEmail": "E-posta ile kayıt ol",
-      "fillDetails": "Başlamak için bilgilerinizi doldurun",
-      "namePlaceholder": "Adınız",
-      "passwordMinLength": "Şifre en az 6 karakter olmalıdır",
-      "createFamily": "Aile oluştur",
-      "familyCreated": "Aile oluşturuldu! 🎉",
-      "familyCodeMessage": "Aile kodunuz: {{code}}\n\nBu kodu partnerinizle paylaşın, böylece katılabilir."
-    },
-    "joinFamily": {
-      "title": "Aileye katıl",
-      "subtitle": "Aile kodunu ve adınızı girin",
-      "familyCodePlaceholder": "ABCDEF",
-      "namePlaceholder": "Adınız",
-      "continue": "Devam et",
-      "invalidCode": "Hata, bu kod yanlış.",
-      "registerWithEmail": "E-posta ile kayıt ol",
-      "createNewAccount": "Yeni hesap oluştur",
-      "loginWithEmail": "E-posta ile giriş yap",
-      "loginExistingAccount": "Mevcut hesabınızla giriş yapın",
-      "haveAccount": "Zaten hesabınız var mı? Giriş yap",
-      "noAccount": "Hesabınız yok mu? Kayıt ol",
-      "welcome": "Hoş geldiniz! 🎉",
-      "welcomeMessage": "Aileye başarıyla eklendiniz.",
-      "addingToFamily": "Aileye ekleniyorsunuz..."
-    },
-    "setupFamily": {
-      "creatingFamily": "Aileniz oluşturuluyor..."
-    }
-  },
   "home": {
-    "title": "Flow Fam",
-    "tagline": "Huzur, genel bakış ve sevgi",
-    "greeting": "Merhaba, {{name}}! 👋",
-    "coins": "{{count}} jetonunuz var 🪙",
-    "welcomeMessage": "Tekrar hoş geldiniz! Size harika bir gün ve görevleriniz ve randevularınızla başarılar diliyorum 🧡",
-    "whoAreYou": "Kimsiniz?",
-    "welcomeToFlowFam": "Flow Fam'e Hoş Geldiniz!",
-    "parent": "👨‍👩‍👧‍👦 Ebeveyn",
-    "child": "👶 Çocuk",
-    "tasksToday": "✅ Bugünkü görevler",
-    "agendaToday": "📅 Bugünkü ajanda",
-    "noTasksToday": "Bugün için görev yok!",
-    "noAppointmentsToday": "Bugün randevu yok!",
-    "appointmentCount": "Bugün {{count}} randevunuz{{plural}} var",
-    "goToAgenda": "Ajandaya git",
-    "yourTasks": "🎯 Görevleriniz",
-    "noTasksEnjoy": "Görev yok! Gününüzün tadını çıkarın!",
-    "executeToday": "Bugün yürüt",
     "menu": {
       "agenda": "Ajanda",
       "tasks": "Görevler",
@@ -163,29 +58,83 @@
       "notes": "Notlar",
       "documents": "Belgeler",
       "shop": "Mağaza",
-      "profile": "Profil"
+      "profile": "Profil",
+      "contactbook": "Kişi defteri",
+      "roosters": "Programlar"
     }
   },
-  "children": {
-    "title": "Çocuklar",
-    "subtitle": "Çocuklarınızı yönetin",
-    "noChildren": "Henüz çocuk eklenmedi",
-    "addChildrenHint": "Ayarlar ekranından çocuk ekleyin"
+  "contactbook": {
+    "title": "Kişi defteri",
+    "subtitle": "Önemli kişiler",
+    "addContact": "Kişi ekle",
+    "newContact": "Yeni kişi",
+    "editContact": "Kişiyi düzenle",
+    "noContacts": "Henüz kişi yok",
+    "addFirstContact": "İlk kişiyi ekleyin!",
+    "nameLabel": "İsim *",
+    "namePlaceholder": "İsim",
+    "categoryLabel": "Kategori",
+    "phoneLabel": "Telefon",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "E-posta",
+    "emailPlaceholder": "email@ornek.com",
+    "noteLabel": "Not",
+    "notePlaceholder": "Ek bilgi...",
+    "fillName": "Bir isim girin",
+    "contactAdded": "Kişi eklendi",
+    "contactUpdated": "Kişi güncellendi",
+    "contactDeleted": "Kişi silindi",
+    "deleteConfirm": "Sil?",
+    "deleteMessage": "\"{{name}}\" kişisini silmek istediğinizden emin misiniz?",
+    "couldNotLoad": "Kişiler yüklenemedi",
+    "errorLoading": "Kişiler yüklenirken bir hata oluştu",
+    "couldNotAdd": "Kişi eklenemedi",
+    "couldNotUpdate": "Kişi güncellenemedi",
+    "couldNotDelete": "Kişi silinemedi",
+    "errorSaving": "Kişi kaydedilirken bir hata oluştu",
+    "errorDeleting": "Kişi silinirken bir hata oluştu",
+    "noFamilyOrUser": "Aile veya kullanıcı bulunamadı"
   },
-  "notifications": {
-    "title": "Bildirimler",
-    "subtitle": "Bildirimleriniz",
-    "noNotifications": "Bildirim yok",
-    "newTaskAssigned": "Yeni görev atandı",
-    "newTaskMessage": "Yeni bir göreviniz var",
-    "reminder": "Hatırlatma",
-    "reminderMessage": "Görevinizi unutmayın",
-    "rewardEarned": "Ödül kazanıldı!",
-    "rewardMessage": "{{count}} jeton kazandınız",
-    "familyUpdate": "Aile güncellemesi",
-    "familyUpdateMessage": "Ajanda güncellendi",
-    "minutesAgo": "{{count}} dakika önce",
-    "hoursAgo": "{{count}} saat önce"
+  "roosters": {
+    "title": "Programlar",
+    "subtitle": "Aile programlarını yönetin",
+    "addSchedule": "Program ekle",
+    "newSchedule": "Yeni program",
+    "editSchedule": "Programı düzenle",
+    "deleteConfirm": "Programı sil?",
+    "deleteMessage": "Bu programı silmek istediğinizden emin misiniz?",
+    "scheduleAdded": "Program eklendi",
+    "scheduleUpdated": "Program güncellendi",
+    "scheduleDeleted": "Program silindi",
+    "addedToAgenda": "Program ajandaya eklendi",
+    "fillTitle": "Bir başlık girin",
+    "selectMember": "Bir aile üyesi seçin",
+    "addScheduleItem": "En az bir program kuralı ekleyin",
+    "titlePlaceholder": "Örn: Emma'nın okul programı",
+    "type": "Tür",
+    "school": "Okul",
+    "work": "İş",
+    "sport": "Spor",
+    "other": "Diğer",
+    "member": "Aile üyesi",
+    "startDate": "Başlangıç tarihi",
+    "endDate": "Bitiş tarihi",
+    "ongoing": "Devam eden",
+    "scheduleRules": "Program kuralları",
+    "addRule": "Kural ekle",
+    "rule": "Kural",
+    "day": "Gün",
+    "startTime": "Başlangıç saati",
+    "endTime": "Bitiş saati",
+    "location": "Konum",
+    "note": "Not",
+    "color": "Renk",
+    "noSchedules": "Henüz program yok",
+    "noSchedulesText": "Başlamak için ilk programınızı ekleyin",
+    "edit": "Düzenle",
+    "delete": "Sil",
+    "addToAgenda": "Ajandaya",
+    "eventsCreated": "randevu oluşturuldu"
   },
   "language": {
     "title": "Dil",
