--- a/locales/zh.json
+++ b/locales/zh.json
@@ -47,112 +47,7 @@
     "year": "年",
     "years": "年"
   },
-  "welcome": {
-    "title": "欢迎来到 Flow Fam",
-    "subtitle": "为您的家庭生活带来结构和平静",
-    "startNewFamily": "创建新家庭",
-    "haveFamilyCode": "使用邀请码加入",
-    "alreadyHaveAccount": "我已有账户 – 登录"
-  },
-  "settings": {
-    "account": "账户",
-    "notSet": "未设置",
-    "role": "角色",
-    "parent": "家长",
-    "child": "孩子",
-    "family": "家庭",
-    "manageFamilyMembers": "管理家庭成员",
-    "shareFamilyCode": "分享家庭代码",
-    "code": "代码",
-    "appSettings": "应用",
-    "changeLanguage": "更改语言",
-    "refreshData": "刷新数据",
-    "refreshing": "刷新中...",
-    "dataRefreshed": "您的数据已刷新",
-    "refreshError": "刷新数据时出错",
-    "logoutConfirm": "您确定要退出登录吗？",
-    "logoutError": "退出登录时出错"
-  },
-  "auth": {
-    "login": {
-      "title": "登录",
-      "subtitle": "欢迎回来！",
-      "withEmail": "使用电子邮件登录",
-      "withApple": "使用 Apple 继续",
-      "withGoogle": "使用 Google 继续",
-      "emailPlaceholder": "you@email.com",
-      "passwordPlaceholder": "您的密码",
-      "fillEmail": "输入您的电子邮件地址",
-      "fillPassword": "输入您的密码",
-      "fillDetails": "填写您的详细信息",
-      "noFamilyFound": "未找到家庭",
-      "noFamilyMessage": "您尚未被添加到家庭。请家庭成员邀请您或创建新家庭。",
-      "appleNotAvailable": "不可用",
-      "appleOnlyIOS": "Apple 登录仅在 iOS 上可用"
-    },
-    "verifyEmail": {
-      "title": "验证您的电子邮件",
-      "subtitle": "我们已向以下地址发送了 6 位验证码",
-      "verify": "验证",
-      "noCodeReceived": "没有收到验证码？",
-      "resendCode": "重新发送验证码",
-      "sending": "发送中...",
-      "codeSent": "已发送！",
-      "codeSentMessage": "我们已向您的电子邮件发送了新的验证码。",
-      "invalidCode": "验证码无效。请重试。",
-      "fillCompleteCode": "输入完整的 6 位验证码"
-    },
-    "createFamily": {
-      "title": "创建新家庭",
-      "subtitle": "选择您想要的登录方式",
-      "registerWithEmail": "使用电子邮件注册",
-      "fillDetails": "填写您的详细信息以开始",
-      "namePlaceholder": "您的姓名",
-      "passwordMinLength": "密码必须至少为 6 个字符",
-      "createFamily": "创建家庭",
-      "familyCreated": "家庭已创建！🎉",
-      "familyCodeMessage": "您的家庭代码是：{{code}}\n\n与您的伴侣分享此代码，以便他们可以加入。"
-    },
-    "joinFamily": {
-      "title": "加入家庭",
-      "subtitle": "输入家庭代码和您的姓名",
-      "familyCodePlaceholder": "ABCDEF",
-      "namePlaceholder": "您的姓名",
-      "continue": "继续",
-      "invalidCode": "抱歉，此代码不正确。",
-      "registerWithEmail": "使用电子邮件注册",
-      "createNewAccount": "创建新账户",
-      "loginWithEmail": "使用电子邮件登录",
-      "loginExistingAccount": "使用您现有的账户登录",
-      "haveAccount": "已有账户？登录",
-      "noAccount": "没有账户？注册",
-      "welcome": "欢迎！🎉",
-      "welcomeMessage": "您已成功添加到家庭。",
-      "addingToFamily": "正在将您添加到家庭..."
-    },
-    "setupFamily": {
-      "creatingFamily": "正在创建您的家庭..."
-    }
-  },
   "home": {
-    "title": "Flow Fam",
-    "tagline": "平静、概览和爱",
-    "greeting": "你好，{{name}}！👋",
-    "coins": "你有 {{count}} 个硬币 🪙",
-    "welcomeMessage": "欢迎回来！祝你今天愉快，任务和约会顺利 🧡",
-    "whoAreYou": "你是谁？",
-    "welcomeToFlowFam": "欢迎来到 Flow Fam！",
-    "parent": "👨‍👩‍👧‍👦 家长",
-    "child": "👶 孩子",
-    "tasksToday": "✅ 今天的任务",
-    "agendaToday": "📅 今天的日程",
-    "noTasksToday": "今天没有任务！",
-    "noAppointmentsToday": "今天没有约会！",
-    "appointmentCount": "你今天有 {{count}} 个约会{{plural}}",
-    "goToAgenda": "前往日程",
-    "yourTasks": "🎯 你的任务",
-    "noTasksEnjoy": "没有任务！享受你的一天！",
-    "executeToday": "今天执行",
     "menu": {
       "agenda": "日程",
       "tasks": "任务",
@@ -163,8 +58,83 @@
       "notes": "笔记",
       "documents": "文档",
       "shop": "商店",
-      "profile": "个人资料"
+      "profile": "个人资料",
+      "contactbook": "联系人簿",
+      "roosters": "时间表"
     }
+  },
+  "contactbook": {
+    "title": "联系人簿",
+    "subtitle": "重要联系人",
+    "addContact": "添加联系人",
+    "newContact": "新联系人",
+    "editContact": "编辑联系人",
+    "noContacts": "还没有联系人",
+    "addFirstContact": "添加第一个联系人！",
+    "nameLabel": "姓名 *",
+    "namePlaceholder": "姓名",
+    "categoryLabel": "类别",
+    "phoneLabel": "电话",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "电子邮件",
+    "emailPlaceholder": "email@example.com",
+    "noteLabel": "备注",
+    "notePlaceholder": "额外信息...",
+    "fillName": "输入姓名",
+    "contactAdded": "联系人已添加",
+    "contactUpdated": "联系人已更新",
+    "contactDeleted": "联系人已删除",
+    "deleteConfirm": "删除？",
+    "deleteMessage": "您确定要删除"{{name}}"吗？",
+    "couldNotLoad": "无法加载联系人",
+    "errorLoading": "加载联系人时出错",
+    "couldNotAdd": "无法添加联系人",
+    "couldNotUpdate": "无法更新联系人",
+    "couldNotDelete": "无法删除联系人",
+    "errorSaving": "保存联系人时出错",
+    "errorDeleting": "删除联系人时出错",
+    "noFamilyOrUser": "未找到家庭或用户"
+  },
+  "roosters": {
+    "title": "时间表",
+    "subtitle": "管理家庭时间表",
+    "addSchedule": "添加时间表",
+    "newSchedule": "新时间表",
+    "editSchedule": "编辑时间表",
+    "deleteConfirm": "删除时间表？",
+    "deleteMessage": "您确定要删除此时间表吗？",
+    "scheduleAdded": "时间表已添加",
+    "scheduleUpdated": "时间表已更新",
+    "scheduleDeleted": "时间表已删除",
+    "addedToAgenda": "时间表已添加到日程",
+    "fillTitle": "输入标题",
+    "selectMember": "选择家庭成员",
+    "addScheduleItem": "至少添加一条时间表规则",
+    "titlePlaceholder": "例如：艾玛的学校时间表",
+    "type": "类型",
+    "school": "学校",
+    "work": "工作",
+    "sport": "运动",
+    "other": "其他",
+    "member": "家庭成员",
+    "startDate": "开始日期",
+    "endDate": "结束日期",
+    "ongoing": "持续",
+    "scheduleRules": "时间表规则",
+    "addRule": "添加规则",
+    "rule": "规则",
+    "day": "日期",
+    "startTime": "开始时间",
+    "endTime": "结束时间",
+    "location": "地点",
+    "note": "备注",
+    "color": "颜色",
+    "noSchedules": "还没有时间表",
+    "noSchedulesText": "添加您的第一个时间表以开始",
+    "edit": "编辑",
+    "delete": "删除",
+    "addToAgenda": "到日程",
+    "eventsCreated": "已创建约会"
   },
   "language": {
     "title": "语言",
@@ -172,6 +142,6 @@
     "current": "当前语言",
     "change": "更改语言",
     "changed": "语言已更改",
-    "changedMessage": "语言已更改为 {{language}}"
+    "changedMessage": "语言已更改为{{language}}"
   }
 }
