--- a/locales/ar.json
+++ b/locales/ar.json
@@ -47,112 +47,7 @@
     "year": "سنة",
     "years": "سنوات"
   },
-  "welcome": {
-    "title": "مرحباً بك في Flow Fam",
-    "subtitle": "أضف البنية والسلام إلى حياتك العائلية",
-    "startNewFamily": "بدء عائلة جديدة",
-    "haveFamilyCode": "الانضمام برمز الدعوة",
-    "alreadyHaveAccount": "لدي حساب بالفعل – تسجيل الدخول"
-  },
-  "settings": {
-    "account": "الحساب",
-    "notSet": "غير محدد",
-    "role": "الدور",
-    "parent": "والد/والدة",
-    "child": "طفل",
-    "family": "العائلة",
-    "manageFamilyMembers": "إدارة أفراد العائلة",
-    "shareFamilyCode": "مشاركة رمز العائلة",
-    "code": "الرمز",
-    "appSettings": "التطبيق",
-    "changeLanguage": "تغيير اللغة",
-    "refreshData": "تحديث البيانات",
-    "refreshing": "جاري التحديث...",
-    "dataRefreshed": "تم تحديث بياناتك",
-    "refreshError": "حدث خطأ أثناء تحديث بياناتك",
-    "logoutConfirm": "هل أنت متأكد من أنك تريد تسجيل الخروج؟",
-    "logoutError": "حدث خطأ أثناء تسجيل الخروج"
-  },
-  "auth": {
-    "login": {
-      "title": "تسجيل الدخول",
-      "subtitle": "مرحباً بعودتك!",
-      "withEmail": "تسجيل الدخول بالبريد الإلكتروني",
-      "withApple": "المتابعة مع Apple",
-      "withGoogle": "المتابعة مع Google",
-      "emailPlaceholder": "you@email.com",
-      "passwordPlaceholder": "كلمة المرور الخاصة بك",
-      "fillEmail": "أدخل عنوان بريدك الإلكتروني",
-      "fillPassword": "أدخل كلمة المرور الخاصة بك",
-      "fillDetails": "املأ بياناتك",
-      "noFamilyFound": "لم يتم العثور على عائلة",
-      "noFamilyMessage": "لم تتم إضافتك إلى عائلة بعد. اطلب من أحد أفراد العائلة دعوتك أو ابدأ عائلة جديدة.",
-      "appleNotAvailable": "غير متاح",
-      "appleOnlyIOS": "تسجيل الدخول بـ Apple متاح فقط على iOS"
-    },
-    "verifyEmail": {
-      "title": "تحقق من بريدك الإلكتروني",
-      "subtitle": "لقد أرسلنا رمز تحقق مكون من 6 أرقام إلى",
-      "verify": "تحقق",
-      "noCodeReceived": "لم تستلم رمزاً؟",
-      "resendCode": "إعادة إرسال الرمز",
-      "sending": "جاري الإرسال...",
-      "codeSent": "تم الإرسال!",
-      "codeSentMessage": "لقد أرسلنا رمز تحقق جديد إلى بريدك الإلكتروني.",
-      "invalidCode": "رمز التحقق غير صالح. يرجى المحاولة مرة أخرى.",
-      "fillCompleteCode": "أدخل الرمز المكون من 6 أرقام بالكامل"
-    },
-    "createFamily": {
-      "title": "بدء عائلة جديدة",
-      "subtitle": "اختر كيف تريد تسجيل الدخول",
-      "registerWithEmail": "التسجيل بالبريد الإلكتروني",
-      "fillDetails": "املأ بياناتك للبدء",
-      "namePlaceholder": "اسمك",
-      "passwordMinLength": "يجب أن تتكون كلمة المرور من 6 أحرف على الأقل",
-      "createFamily": "إنشاء عائلة",
-      "familyCreated": "تم إنشاء العائلة! 🎉",
-      "familyCodeMessage": "رمز عائلتك هو: {{code}}\n\nشارك هذا الرمز مع شريكك حتى يتمكن من الانضمام."
-    },
-    "joinFamily": {
-      "title": "الانضمام إلى العائلة",
-      "subtitle": "أدخل رمز العائلة واسمك",
-      "familyCodePlaceholder": "ABCDEF",
-      "namePlaceholder": "اسمك",
-      "continue": "متابعة",
-      "invalidCode": "عذراً، هذا الرمز غير صحيح.",
-      "registerWithEmail": "التسجيل بالبريد الإلكتروني",
-      "createNewAccount": "إنشاء حساب جديد",
-      "loginWithEmail": "تسجيل الدخول بالبريد الإلكتروني",
-      "loginExistingAccount": "تسجيل الدخول بحسابك الحالي",
-      "haveAccount": "هل لديك حساب بالفعل؟ تسجيل الدخول",
-      "noAccount": "ليس لديك حساب؟ التسجيل",
-      "welcome": "مرحباً! 🎉",
-      "welcomeMessage": "تمت إضافتك بنجاح إلى العائلة.",
-      "addingToFamily": "جاري إضافتك إلى العائلة..."
-    },
-    "setupFamily": {
-      "creatingFamily": "جاري إنشاء عائلتك..."
-    }
-  },
   "home": {
-    "title": "Flow Fam",
-    "tagline": "السلام والنظرة العامة والحب",
-    "greeting": "مرحباً، {{name}}! 👋",
-    "coins": "لديك {{count}} عملات 🪙",
-    "welcomeMessage": "مرحباً بعودتك! أتمنى لك يوماً رائعاً ونجاحاً في مهامك ومواعيدك 🧡",
-    "whoAreYou": "من أنت؟",
-    "welcomeToFlowFam": "مرحباً بك في Flow Fam!",
-    "parent": "👨‍👩‍👧‍👦 والد/والدة",
-    "child": "👶 طفل",
-    "tasksToday": "✅ المهام اليوم",
-    "agendaToday": "📅 الأجندة اليوم",
-    "noTasksToday": "لا توجد مهام لليوم!",
-    "noAppointmentsToday": "لا توجد مواعيد اليوم!",
-    "appointmentCount": "لديك {{count}} موعد{{plural}} اليوم",
-    "goToAgenda": "الذهاب إلى الأجندة",
-    "yourTasks": "🎯 مهامك",
-    "noTasksEnjoy": "لا توجد مهام! استمتع بيومك!",
-    "executeToday": "تنفيذ اليوم",
     "menu": {
       "agenda": "الأجندة",
       "tasks": "المهام",
@@ -163,8 +58,83 @@
       "notes": "الملاحظات",
       "documents": "المستندات",
       "shop": "المتجر",
-      "profile": "الملف الشخصي"
+      "profile": "الملف الشخصي",
+      "contactbook": "دفتر جهات الاتصال",
+      "roosters": "الجداول الزمنية"
     }
+  },
+  "contactbook": {
+    "title": "دفتر جهات الاتصال",
+    "subtitle": "جهات الاتصال المهمة",
+    "addContact": "إضافة جهة اتصال",
+    "newContact": "جهة اتصال جديدة",
+    "editContact": "تعديل جهة الاتصال",
+    "noContacts": "لا توجد جهات اتصال بعد",
+    "addFirstContact": "أضف جهة الاتصال الأولى!",
+    "nameLabel": "الاسم *",
+    "namePlaceholder": "الاسم",
+    "categoryLabel": "الفئة",
+    "phoneLabel": "الهاتف",
+    "phonePlaceholder": "06 12345678",
+    "emailLabel": "البريد الإلكتروني",
+    "emailPlaceholder": "email@example.com",
+    "noteLabel": "ملاحظة",
+    "notePlaceholder": "معلومات إضافية...",
+    "fillName": "أدخل اسماً",
+    "contactAdded": "تمت إضافة جهة الاتصال",
+    "contactUpdated": "تم تحديث جهة الاتصال",
+    "contactDeleted": "تم حذف جهة الاتصال",
+    "deleteConfirm": "حذف؟",
+    "deleteMessage": "هل أنت متأكد من أنك تريد حذف \"{{name}}\"؟",
+    "couldNotLoad": "تعذر تحميل جهات الاتصال",
+    "errorLoading": "حدث خطأ أثناء تحميل جهات الاتصال",
+    "couldNotAdd": "تعذر إضافة جهة الاتصال",
+    "couldNotUpdate": "تعذر تحديث جهة الاتصال",
+    "couldNotDelete": "تعذر حذف جهة الاتصال",
+    "errorSaving": "حدث خطأ أثناء حفظ جهة الاتصال",
+    "errorDeleting": "حدث خطأ أثناء حذف جهة الاتصال",
+    "noFamilyOrUser": "لم يتم العثور على عائلة أو مستخدم"
+  },
+  "roosters": {
+    "title": "الجداول الزمنية",
+    "subtitle": "إدارة الجداول الزمنية للعائلة",
+    "addSchedule": "إضافة جدول زمني",
+    "newSchedule": "جدول زمني جديد",
+    "editSchedule": "تعديل الجدول الزمني",
+    "deleteConfirm": "حذف الجدول الزمني؟",
+    "deleteMessage": "هل أنت متأكد من أنك تريد حذف هذا الجدول الزمني؟",
+    "scheduleAdded": "تمت إضافة الجدول الزمني",
+    "scheduleUpdated": "تم تحديث الجدول الزمني",
+    "scheduleDeleted": "تم حذف الجدول الزمني",
+    "addedToAgenda": "تمت إضافة الجدول الزمني إلى الأجندة",
+    "fillTitle": "أدخل عنواناً",
+    "selectMember": "اختر أحد أفراد العائلة",
+    "addScheduleItem": "أضف قاعدة جدول زمني واحدة على الأقل",
+    "titlePlaceholder": "مثال: جدول مدرسة إيما",
+    "type": "النوع",
+    "school": "مدرسة",
+    "work": "عمل",
+    "sport": "رياضة",
+    "other": "أخرى",
+    "member": "فرد من العائلة",
+    "startDate": "تاريخ البدء",
+    "endDate": "تاريخ الانتهاء",
+    "ongoing": "مستمر",
+    "scheduleRules": "قواعد الجدول الزمني",
+    "addRule": "إضافة قاعدة",
+    "rule": "قاعدة",
+    "day": "اليوم",
+    "startTime": "وقت البدء",
+    "endTime": "وقت الانتهاء",
+    "location": "الموقع",
+    "note": "ملاحظة",
+    "color": "اللون",
+    "noSchedules": "لا توجد جداول زمنية بعد",
+    "noSchedulesText": "أضف جدولك الزمني الأول للبدء",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "addToAgenda": "إلى الأجندة",
+    "eventsCreated": "مواعيد تم إنشاؤها"
   },
   "language": {
     "title": "اللغة",
